# whisper_library

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  generate_flutter_clean.sh  generate_remove.sh  pubspec.yaml
.github/workflows/: release-examples.yaml  schedule.yaml
example/: analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/dev/: generate_schemes.dart
example/lib/: main.dart
example/lib/core/: core.dart
example/lib/packagex/: packagex.dart
example/lib/page/whisper/: whisper.dart
example/lib/scheme/scheme/: application_whisper_library_database.dart  scheme.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
examples/whisper_app/: README.md  analysis_options.yaml  pubspec.yaml
examples/whisper_app/android/app/: build.gradle.kts
examples/whisper_app/dev/: generate_schemes.dart
examples/whisper_app/ios/Runner/: Info.plist
examples/whisper_app/ios/Runner.xcodeproj/: project.pbxproj
examples/whisper_app/lib/: main.dart
examples/whisper_app/linux/: CMakeLists.txt
examples/whisper_app/web/: index.html
examples/whisper_app/windows/: CMakeLists.txt
native_lib/: .gitignore  CMakeLists.txt  compile  compile-android  test
package/whisper_library/: analysis_options.yaml  pubspec.yaml  test
package/whisper_library/example/: dependency_overrides.yaml  guide-dart-generalSystemDevice_system_device-library.md  install-android  pubspec.yaml
package/whisper_library/examples/: example.dart  test.dart
package/whisper_library/lib/: base.dart  io.dart  none.dart  whisper_library.dart
package/whisper_library_dart/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
package/whisper_library_dart/example/: example.dart
package/whisper_library_dart/lib/: base.dart  io.dart  none.dart  whisper_library_dart.dart
package/whisper_library_flutter/: .gitignore  CHANGELOG.md  README.md  index.html  pubspec.yaml
package/whisper_library_flutter/android/: build.gradle  settings.gradle
package/whisper_library_flutter/example/: README.md
package/whisper_library_flutter/ios/: whisper_library_flutter.podspec
package/whisper_library_flutter/lib/: whisper_library_flutter.dart
package/whisper_library_flutter/linux/: CMakeLists.txt  libwhisper.so.1.7.4
package/whisper_library_flutter/macos/: whisper_library_flutter.podspec
package/whisper_library_flutter/windows/: CMakeLists.txt
test/: whisper_library_test.dart
(+38 files in other folders)
